# Advanced-Computing

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  docker-compose.yml  heat_diffusion.cpp
Heat-Diffusion/: CMakeLists.txt  Dockerfile  Doxyfile  animate.ipynb
Heat-Diffusion/benchmark/: heat_diffusion_benchmark_optimised_timing_v2.cpp
Heat-Diffusion/profiling_results/valgrind/: benchmark_200.txt  callgrind_output.txt  callgrind_report.txt  massif_report.txt
Heat-Diffusion/profiling_results_basic/: summary.txt
Heat-Diffusion/profiling_results_basic/gprof/: gprof_report.txt
Heat-Diffusion/profiling_results_basic/valgrind/: benchmark_100.txt  benchmark_1000.txt  benchmark_200.txt  benchmark_500.txt  cachegrind_report.txt  callgrind_report.txt  massif_output.txt  massif_report.txt
Heat-Diffusion/profiling_results_optimised/: summary.txt
Heat-Diffusion/profiling_results_optimised/valgrind/: benchmark_500.txt  cachegrind_output.txt  callgrind_output.txt  callgrind_report.txt  massif_report.txt
Heat-Diffusion/scripts/: validation.sh
Heat-Diffusion/src/base/: heat_diffusion.cpp  heat_diffusion.h  main.cpp
Heat-Diffusion/src/mpi/: optimized_heat_diffusion_mpi.cpp
Heat-Diffusion/src/optimized_v2/: optimized_heat_diffusion.cpp  optimized_heat_diffusion.h
Heat-Diffusion/tools/: test_validation  test_validation.cpp  validate  validate.cpp  validator.h
benchmark/: heat_diffusion_benchmark_hybrid.cpp  heat_diffusion_benchmark_mpi.cpp  heat_diffusion_benchmark_openmp.cpp  heat_diffusion_benchmark_optimised_timing_v1.cpp  heat_diffusion_benchmark_optimised_timing_v2.cpp  heat_diffusion_benchmark_optimised_timing_v3.cpp  heat_diffusion_benchmark_timing.cpp  heat_diffusion_performance.cpp  heat_diffusion_performance_optimised.cpp
csd3_scripts/: comprehensive-profiling-script-base.sh  comprehensive-profiling-script-hybrid.sh  comprehensive-profiling-script-mpi.sh  comprehensive-profiling-script-openmp.sh  comprehensive-profiling-script-optimised.sh  runall-scripts.sh
docs/: mainpage.md
include/Array_2D/: Array_2D.cpp
notebook/: visualization.ipynb
profiling_results/: summary.txt
profiling_results/gprof/: gprof_report.txt
profiling_results/valgrind/: benchmark_100.txt  benchmark_1000.txt  benchmark_500.txt  cachegrind_output.txt  cachegrind_report.txt  massif_output.txt
profiling_results_base/: summary.txt
profiling_results_base/cachegrind/: benchmark_100.txt  benchmark_1000.txt  benchmark_200.txt  benchmark_2000.txt  benchmark_500.txt  report_100.txt  report_1000.txt  report_200.txt  report_2000.txt  report_500.txt  stats_1000.txt  stats_2000.txt
profiling_results_base/gprof/: gprof_report.txt
profiling_results_base/valgrind/: benchmark_100.txt  benchmark_1000.txt  benchmark_200.txt  benchmark_500.txt  cachegrind_output.txt  callgrind_output.txt  callgrind_report.txt  massif_output.txt  massif_report.txt
profiling_results_base_csd3/: benchmark_500.txt  summary.txt
profiling_results_basic/valgrind/: cachegrind_output.txt  callgrind_output.txt
profiling_results_hybrid/: summary.txt
profiling_results_hybrid/affinity/: bind_close.txt  bind_master.txt  bind_spread.txt
profiling_results_hybrid/communication/: grid1000_p2_t2.txt  grid200_p2_t2.txt  grid500_p2_t2.txt
profiling_results_hybrid/process_thread_balance/: procs10_threads1.txt  procs1_threads10.txt  procs2_threads5.txt  procs4_threads2.txt  procs5_threads2.txt
profiling_results_hybrid/scaling/: strong_p1_t1.txt  strong_p1_t2.txt  strong_p1_t4.txt  strong_p2_t1.txt  strong_p2_t2.txt  strong_p4_t1.txt  strong_p4_t2.txt  weak_p1_t1.txt  weak_p1_t2.txt  weak_p1_t4.txt  weak_p2_t1.txt  weak_p2_t2.txt  weak_p4_t1.txt  weak_p4_t2.txt
profiling_results_hybrid/valgrind/: cachegrind_output.txt  cachegrind_report.txt
profiling_results_hybrid_csd3/: summary.txt
profiling_results_hybrid_csd3/affinity/: kmp_affinity_disabled.txt  omp_bind_balanced.txt
profiling_results_hybrid_csd3/placement/: multi_node_152ranks.txt  multi_node_fabric_shm:dapl.txt  multi_node_fabric_shm:tcp.txt  multi_node_hybrid_19ranks_4threads.txt  multi_node_hybrid_2ranks_76threads.txt  multi_node_size_1000.txt  multi_node_size_4000.txt  single_node_76ranks.txt  single_node_76ranks_second.txt
profiling_results_hybrid_csd3/scaling/: strong_p1_t2.txt  strong_p2_t1.txt  strong_p2_t38.txt  strong_p38_t2.txt  strong_p4_t19.txt
profiling_results_mpi/: summary.txt
profiling_results_mpi/communication/: grid1000_ranks1.txt  grid1000_ranks2.txt  grid1000_ranks4.txt  grid1000_ranks8.txt  grid100_ranks1.txt  grid100_ranks2.txt  grid100_ranks4.txt  grid100_ranks8.txt  grid400_ranks1.txt  grid400_ranks2.txt  grid400_ranks4.txt  grid400_ranks8.txt
profiling_results_mpi/gprof/: gprof_report_combined.txt
profiling_results_mpi/scaling/: strong_scaling_10ranks.txt  strong_scaling_1ranks.txt  strong_scaling_2ranks.txt  strong_scaling_4ranks.txt  strong_scaling_8ranks.txt  weak_scaling_10ranks.txt  weak_scaling_1ranks.txt  weak_scaling_2ranks.txt  weak_scaling_4ranks.txt  weak_scaling_8ranks.txt
profiling_results_mpi/valgrind/: cachegrind_output.txt  cachegrind_report.txt
profiling_results_mpi_csd3/: summary.txt
profiling_results_mpi_csd3/communication/: grid1000_ranks1.txt  grid1000_ranks16.txt  grid1000_ranks32.txt  grid1000_ranks4.txt  grid100_ranks1.txt  grid100_ranks8.txt  grid2000_ranks1.txt  grid2000_ranks16.txt  grid2000_ranks2.txt  grid2000_ranks32.txt  grid2000_ranks4.txt  grid2000_ranks8.txt  grid200_ranks1.txt  (+20 more)
profiling_results_omp/: summary.txt
profiling_results_omp_csd3/: openmp_info.txt  summary.txt
profiling_results_optimised/: summary.txt
profiling_results_optimised_csd3/: benchmark_100.txt  benchmark_200.txt  benchmark_2000.txt  benchmark_500.txt  summary.txt
python_script/: halo.py
scripts/: block_size_optimizer.sh  compiler_flag.sh  comprehensive-profiling-script-base.sh  comprehensive-profiling-script-hybrid.sh  comprehensive-profiling-script-mpi.sh  comprehensive-profiling-script-openmp.sh  comprehensive-profiling-script-optimised.sh
tools/: block_size_optimizer.cpp
(+762 files in other folders)
